##Text encoding: utf-8

2006-08-16 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* programs/gchem3d-viewer.c (entries[]): Fixed GTK_STOCK_PRINT and
	added GTK_STOCK_ABOUT icon.
	(on_about, on_about_activate_url): Added some improvements and a
	"clickable" Homepage-URL.
	* programs/gchemcalc.cc (main): More general usage output.
	(entries[]): Ditto (see above).
	(on_about, on_about_activate_url): Ditto (see above).
	(cb_print_version): Fixed output string.
	* programs/gchemtable-app.cc (entries[]): Ditto (see above).
	(on_about, on_about_activate_url): Ditto (see above).

2006-08-16 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* programs/gchem3d-viewer.c (main): Added missing i18n-support
	initialisation. Fixed a bug in the handling og the [-d|--display3d]
	option (SpaceFill was not recognized).

2006-08-15 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* configure.ac: Escaped squared brackets. Fixed the AC_ARG_ENABLE and
	AC_ARG_WITH macro usage. Some $foodir variables need be be processed
	twice with eval or we will observe a bug. Some cosmetic improvements.
	Small changes for the way we detect the fd.o helper utils and ask the
	question, if they should run after installation.
	* Makefile.am: Ditto. Implemented the changes if the fd.o helper utils
	should run after installation.

2006-08-15 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* docs/man/gchem3d-viewer.1.xml: Added Jean as program author to
	AUTHORs section.
	* docs/man/gchemcalc.1.xml: Ditto.
	* docs/man/gchemtable.1.xml: Ditto.
	* docs/man/libgcu.3.xml: Ditto.
	* docs/man/gchem3d-viewer.1: Updated from source.
	* docs/man/gchemcalc.1: Ditto.
	* docs/man/gchemtable.1: Ditto.
	* docs/man/libgcu.3: Ditto.
	* docs/man/Makefile.am (XSLTPROC_FLAGS): Added man.charmap.use.subset
	parameter to allow the correctly formatted output of Jeans surname :).

2006-08-15 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* docs/man/gchem3d-viewer.1.xml: One small adjustment, so the option