@@ -32,10 +32,6 @@ using namespace gcu;
 
 int main (int argc, char *argv[])
 {
-	bindtextdomain (GETTEXT_PACKAGE, DATADIR"/locale");
-#ifdef ENABLE_NLS
-	bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
-#endif
 	textdomain (GETTEXT_PACKAGE);
 	gtk_init (&argc, &argv);
 	/* Initialize libgoffice */
